# buck-converter-simulation

./: .gitignore  CMakeLists.txt  CMakePresets.json  FindAriadne.cmake  FindMPFR.cmake  README  README.md
cmake/: FindAriadne.cmake  FindMPFR.cmake  populate_cache.cmake  preset_configuration.cmake  utilities.cmake
doc/: Working with Qt Creator.md
src/: CMakeLists.txt  hybrid_evolution_tutorial.cpp
